--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./build/index.js",
     "build": "tsc",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "dev:command": "ts-node --files ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -18,15 +19,23 @@
     "url": "https://github.com/danielsolartech/nextchat-api/issues"
   },
   "homepage": "https://github.com/danielsolartech/nextchat-api#readme",
+  "_moduleAliases": {
+    "@NextChat": "src/manager/index.ts",
+    "@Models": "src/database/models",
+    "@Core": "src"
+  },
   "devDependencies": {
     "@types/node": "^14.0.13",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "module-alias": "^2.2.2",
+    "moment": "^2.26.0",
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.25"
   }
 }
