--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,28 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES6",
     "module": "CommonJS",
+    "moduleResolution": "node",
+    "strict": false,
+    "noImplicitAny": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "isolatedModules": false,
+    "importHelpers": true,
+    "sourceMap": true,
     "outDir": "./build",
     "baseUrl": "./src",
-    "typeRoots": [
-      "./node_modules/@types/",
-      "./src/@types/",
-    ],
+    "paths": {
+      "@NextChat": [
+        "manager/index.ts",
+      ],
+      "@Models/*": [
+        "database/models/*.ts",
+      ],
+      "@Core/*": [
+        "*",
+      ],
+    }
   },
   "exclude": [
     "./node_modules/",
