--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@Core": "src"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.13",
     "@types/socket.io": "^2.1.8",
@@ -36,6 +37,8 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "big-integer": "^1.6.48",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
